--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -8,6 +8,13 @@
 <body>
     <div>
         <h1>Dashboard</h1>
+        <div>
+            <p>Welcome, {{ current_user.username }}!</p>
+            <div>
+                <button>Activate Tradingbot</button>
+            </div>
+            <a href="{{ url_for('logout') }}">Logout</a>
+        </div>
     </div>
 </body>
 </html>
